# loafware

./: README.md  pyproject.toml  requirements.txt  setup.py
docs/: planning.md  testing_notes.md
examples/: example_dcmt.py  example_rlht.py
src/loafware/: __init__.py  motor_controller_slice.py  pycrumbs_wrapper.py  relay_heater_slice.py  slice_base.py
